--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,132 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+* {
+    box-sizing: border-box;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+      
+  .movie-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 2rem;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .movie {
+    position: relative;
+    width: 300px;
+    margin: 1rem;
+    background-color: white;
+    border-radius: 4px;
+    box-shadow:3px 3px 5px rgba(36, 37, 37, 0.1);
+    overflow: hidden;
   }
-}
+  
+  .movie img {
+    max-width: 100%;
+  }
+  
+  .movie-info {
+    display: flex;
+    padding: 1rem;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .movie-info span {
+    align-self: baseline;
+  }
+  
+  .movie-info h3 {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    color:#2E444E;
+    font-size:x-large;
+    font-weight: 600;
+  }
+  
+  .movie-over {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #222;
+    color:ghostwhite;
+    font-family: Arial, Helvetica, sans-serif;
+    transform: translateY(100%);
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .movie:hover .movie-over {
+    transform: translateY(0%);
+  }
+  
+  .movie-over p, h3 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    line-height: 1.3rem;
+  }
+  
+  .tag {
+    padding: 0.5rem;
+    border-radius: 4px;
+    border: 0.1px solid #222;
+  }
+  
+  .tag.green {
+    color:limegreen;
+  }
+  
+  .tag.red {
+    color:rgb(255, 64, 64);
+  }
+  
+  .tag.orange {
+    color:rgb(253, 174, 28);
+  }
+  
+  footer {
+    background-color:rgb(62, 66, 66);
+    display: flex;
+    justify-content: center;
+    padding: 1rem;
+    margin-top: 2rem;
+    color:grey;
+  }
+  
+  .charts-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+  
+  .line-chart {
+    margin-bottom: 5rem;
+    width: 95%;
+  }
+  
+  .pie-chart {
+    width: 95%;
+  }
+  
+  @media (max-width: 480px) {  
+    .movie {
+      width: 250px;
+      font-size: 14px;
+    }
+  
+    .movie-info h3 {
+        font-size:x-small;
+    }
+  }
+  
+  @media (max-width: 768px) {  
+    .movie {
+      width: 280px;
+      font-size: 16px;
+    }
+
+    .movie-info h3 {
+        font-size: large;
+    }
+  }
