--- a/src/App.css
+++ b/src/App.css
@@ -1,103 +1,16 @@
-* {
-    box-sizing: border-box;
-  }
-      
-  .movie-container {
+
+ .movie-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 2rem;
   }
-  
-  .movie {
-    position: relative;
-    width: 300px;
-    margin: 1rem;
-    background-color: white;
-    border-radius: 4px;
-    box-shadow:3px 3px 5px rgba(36, 37, 37, 0.1);
-    overflow: hidden;
-  }
-  
-  .movie img {
-    max-width: 100%;
-  }
-  
-  .movie-info {
-    display: flex;
-    padding: 1rem;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .movie-info span {
-    align-self: baseline;
-  }
-  
-  .movie-info h3 {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    color:#2E444E;
-    font-size:x-large;
-    font-weight: 600;
-  }
-  
-  .movie-over {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #222;
-    color:ghostwhite;
-    font-family: Arial, Helvetica, sans-serif;
-    transform: translateY(100%);
-    transition: transform 0.3s ease-in-out;
-  }
-  
-  .movie:hover .movie-over {
-    transform: translateY(0%);
-  }
-  
-  .movie-over p, h3 {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-    line-height: 1.3rem;
-  }
-  
-  .tag {
-    padding: 0.5rem;
-    border-radius: 4px;
-    border: 0.1px solid #222;
-  }
-  
-  .tag.green {
-    color:limegreen;
-  }
-  
-  .tag.red {
-    color:rgb(255, 64, 64);
-  }
-  
-  .tag.orange {
-    color:rgb(253, 174, 28);
-  }
-  
-  footer {
-    background-color:rgb(62, 66, 66);
-    display: flex;
-    justify-content: center;
-    padding: 1rem;
-    margin-top: 2rem;
-    color:grey;
-  }
-  
+    
   .charts-container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     margin-top: 5rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
   }
   
   .line-chart {
@@ -107,26 +20,7 @@
   
   .pie-chart {
     width: 95%;
+    margin-bottom: 5rem;
   }
   
-  @media (max-width: 480px) {  
-    .movie {
-      width: 250px;
-      font-size: 14px;
-    }
   
-    .movie-info h3 {
-        font-size:x-small;
-    }
-  }
-  
-  @media (max-width: 768px) {  
-    .movie {
-      width: 280px;
-      font-size: 16px;
-    }
-
-    .movie-info h3 {
-        font-size: large;
-    }
-  }
